--- a/contrib/translations/utf-8/it/it-0.78.0-alpha.txt
+++ b/contrib/translations/utf-8/it/it-0.78.0-alpha.txt
@@ -1,9 +1,11 @@
 :CONFIG_FULLSCREEN
-Avvia DOSBox direttamente a schermo intero.
+Avvia direttamente a schermo intero.
+Digita INTRO e osserva la sezione Tasti Speciali per visualizzare la lista dei
+tasti di scelta rapida per il controllo della finestra.
 .
 :CONFIG_DISPLAY
-Numero dello schermo da utilizzare; Il valore dipende dall'OS e dalle
-impostazioni dell'utente.
+Numero dello schermo da utilizzare; Il valore dipende dal sistema operativo
+e dalle impostazioni dell'utente.
 .
 :CONFIG_VSYNC
 Impostazione Sincronizzazione Verticale non implementata (parametro ignorato).
@@ -15,17 +17,13 @@ dimensione fissa (es. 1024x768).
 :CONFIG_WINDOWRESOLUTION
 Imposta le dimensioni della finestra da utilizzare durante l'esecuzione
 in modalità finestra:
-  default:   Seleziona l'opzione migliore in base al tuo
-             ambiente e ad altre impostazioni.
-  original:  Ridimensiona la finestra alla risoluzione
-             scelta dal programma emulato.
-  resizable: Rendi ridimensionabile la finestra dell'emulatore.
-             Questa è un'opzione sperimentale, funziona solo con
-             output=opengl e glshader=sharp (o none)
-  <custom>:  Ridimensiona il contenuto della finestra alle dimensioni
-             indicate, nel formato LxA (larghezza x altezza). 
-             Per esempio: 1024x768.
-             Il ridimensionamento non viene eseguito per output=surface.
+  default:   Seleziona l'opzione migliore in base al tuo sistema e ad altre
+             impostazioni.
+  small, medium, o large (o s, m, l):
+             Ridimensiona la finestra in base alla risoluzione del desktop.
+  <custom>:  Ridimensiona la finestra in base alle dimensioni indicate
+             nel formato WxH. Per esempio: 1024x768.
+             Il ridimensionamento non viene eseguito con output=surface.
 .
 :CONFIG_OUTPUT
 Sistema video da usare per l'output.
@@ -36,21 +34,14 @@ texture. Usa texture_renderer=auto per una scelta automatica.
 .
 :CONFIG_CAPTURE_MOUSE
 Metodo di controllo del mouse:
-   onclick:        Il mouse viene catturato dopo il primo
-                   clic all'interno della finestra.
-   onstart:        Il mouse viene catturato immediatamente all'avvio
-                   (simile al vero DOS).
-   seamless:       Il mouse può muoversi senza problemi dentro e fuori
-                   la finestra di DOSBox e non può essere catturato.
-   nomouse:        Il mouse è disabilitato e nascosto senza alcun
-                   segnale inviato al gioco.
+   onclick:       Cattura il mouse al primo clic all'interno della finestra.
+   onstart:       Cattura il mouse immediatamente all'avvio.
+   seamless:      Il mouse non viene catturato; può muoversi liberamente.
+   nomouse:       Nasconde il mouse e non invia alcun segnale al gioco.
 Gestione del clic centrale (secondo parametro):
-   middlegame:     I clic centrali vengono inviati al gioco
-   middlerelease:  I clic centrali rilasciano il mouse
-                   (non inviati al gioco). Tuttavia, i clic centrali
-                   verranno inviati al gioco in modalità schermo intero
-                   o quando è impostato il controllo continuo.
-Defaults (se non è presente o incorretto): seamless middlerelease
+   middlegame:    I clic centrali vengono inviati al gioco.
+   middlerelease: I clic centrali rilasciano il mouse precedentemente catturato
+Defaults (se non presente o incorretto): seamless middlerelease
 .
 :CONFIG_SENSITIVITY
 Sensibilità del mouse. Il secondo parametro opzionale specifica la sensibilità
@@ -66,8 +57,10 @@ Aspetta prima di chiudere la console in caso di errore di DOSBox.
 .
 :CONFIG_PRIORITY
 Livelli di priorità per DOSBox. La seconda voce dopo la virgola è per quando
-DOSBox è minimizzato o non in primo piano. 'pause' può essere usato solo per
-la seconda voce.
+DOSBox è minimizzato o non in primo piano.
+'pause' può essere usato solo per la seconda voce.
+'auto' disabilita i livelli di priorità e utilizza le impostazioni predefinite
+del sistema operativo.
 .
 :CONFIG_MAPPERFILE
 File utilizzato per caricare/salvare le corrispondenze tasto/evento.
@@ -88,7 +81,7 @@ Tipo di macchina che DOSBox sta cercando di emulare.
 Cartella in cui vengono salvati file come suoni WAVE, musica MIDI e screenshot.
 .
 :CONFIG_MEMSIZE
-Quantità di memoria a disposizione di DOSBox, in megabytes.
+Quantità di memoria a disposizione di DOSBox, in megabyte.
 Si consiglia di non modificare questo valore per evitare problemi con alcuni
 giochi, anche se potrebbe essere necessario aumentarlo per farne funzionare
 alcuni. Di solito non vi è nessun guadagno in velocità alzando questo valore.
@@ -111,7 +104,7 @@ Ridimensiona la risoluzione verticale dello schermo per produrre un rapporto
 di aspetto 4:3, corrispondente a quello dei monitor a definizione standard
 originali, per i quali sono stati progettati la maggior parte dei giochi DOS.
 Questa impostazione ha effetto solo sulle modalità video che utilizzano pixel
-non quadrati, come 320x200 o 640x400; Le modalità video a pixel quadrato,
+non quadrati, come 320x200 o 640x400; Le modalità video a pixel quadrati,
 come 640x480 e 800x600, verranno visualizzate così come sono.
 .
 :CONFIG_MONOCHROME_PALETTE
@@ -133,8 +126,8 @@ l'output OpenGL. Può essere un percorso assoluto, un file nella sottocartella
 'glshaders' della cartella di configurazione di DOSBox, o uno degli shader
 incorporati:
 advinterp2x, advinterp3x, advmame2x, advmame3x,
-crt-easymode-flat, crt-fakelottes-flat, rgb2x, rgb3x,
-scan2x, scan3x, tv2x, tv3x, sharp (predefinito).
+crt-easymode-flat, crt-fakelottes-flat, rgb2x,
+rgb3x, scan2x, scan3x, tv2x, tv3x, sharp (predefinito).
 .
 :CONFIG_CORE
 Core CPU usato nell'emulazione. 'auto' diventerà 'dynamic' quando possibile e
@@ -145,7 +138,7 @@ appropriato.
 Tipo di CPU usata nell'emulazione. 'auto' è la scelta più veloce.
 .
 :CONFIG_CYCLES
-Quantità di istruzioni che DOSBox prova a emulare ogni millisecondo.
+Numero di istruzioni che DOSBox prova ad emulare ogni millisecondo.
 Un valore troppo alto produrrà perdite nell'audio e ritardi.
 I cicli possono essere impostati in 3 modi:
   'auto'          prova a indovinare le necessità del gioco.
@@ -156,11 +149,17 @@ I cicli possono essere impostati in 3 modi:
                   gestire.
 .
 :CONFIG_CYCLEUP
-Quantità di cicli di cui aumentare usando gli appositi tasti.
+Numero di cicli di cui aumentare usando i tasti di scelta rapida per il
+controllo della velocità.
+Digita INTRO e osserva la sezione Tasti Speciali per visualizzare la lista dei
+tasti di scelta rapida.
 .
 :CONFIG_CYCLEDOWN
-Quantità di cicli di cui diminuire usando gli appositi tasti.
+Numero di cicli di cui diminuire usando i tasti di scelta rapida per il
+controllo della velocità.
 Un valore più basso di 100 indica una percentuale.
+Digita INTRO e osserva la sezione Tasti Speciali per visualizzare la lista dei
+tasti di scelta rapida.
 .
 :CONFIG_NOSOUND
 Attiva la modalità silenziosa, ma il suono viene comunque emulato.
@@ -214,26 +213,27 @@ Ad esempio: 'soundfont.sf2 50' lo attenuerà del 50 percento.
 La percentuale del volume può variare da 1 a 500.
 .
 :CONFIG_MODEL
-Modello di sintetizzatore da utilizzare. L'impostazione predefinita (auto)
-preferisce CM-32L, se vengono forniti entrambi i set di ROM. 
-Per i primi giochi Sierra e Dune 2, si consiglia di utilizzare 'mt32', mentre
-i giochi più recenti in genere utilizzano gli effetti sonori extra del CM-32L
-(usa 'auto' o 'cm32l')
+Modello di sintetizzatore da utilizzare. 
+'auto' sceglie il primo modello con ROM disponibili, nell'ordine indicato.
+'cm32l' e 'mt32' scelgono il primo modello del loro tipo, nell'ordine indicato.
+'mt32_old' e 'mt32_new' si riferiscono rispettivamente ai modelli 1.07 e 2.04.
 .
 :CONFIG_ROMDIR
-Cartella contenente una o entrambe le coppie di ROM MT-32 e/o CM-32L.
-I file devono essere denominati in maiuscolo, come segue: 
-  - ROM MT-32 necessarie: MT32_CONTROL.ROM e MT32_PCM.ROM
-  - ROM CM-32L necessarie: CM32L_CONTROL.ROM e CM32L_PCM.ROM
+Cartella contenente le ROM di uno o più modelli.
 Il percorso della cartella può essere assoluto o relativo, o lasciato vuoto
-per usare la cartella 'mt32-roms' nella cartella di configurazione di DOSBox,
-o un'altra directory del sistema.
+per usare la cartella 'mt32-roms' nella cartella di configurazione di DOSBox.
+Verranno verificate anche altre posizioni di sistema comuni.
+All'interno di questa cartella, possono essere inclusi i seguenti file ROM:
+  - MT32_CONTROL.ROM e MT32_PCM.ROM, per il modello 'mt32'.
+  - CM32L_CONTROL.ROM e CM32L_PCM.ROM, per il modello 'cm32l'.
+  - ROM MAME MT-32 e CM-32L decompresse, per i modelli suddivisi in base alla
+    versione.
 .
 :CONFIG_SBTYPE
 Tipo di Sound Blaster da emulare. 'gb' è il Game Blaster.
 .
 :CONFIG_SBBASE
-Indirizzo IO della scheda audio Sound Blaster.
+Indirizzo porta IO della scheda audio Sound Blaster.
 .
 :CONFIG_IRQ
 Numero IRQ della scheda audio Sound Blaster.
@@ -263,7 +263,7 @@ Provider per l'emulazione OPL. 'compat' fornisce una migliore qualità, 'nuked'
 Abilita l'emulazione della scheda audio Gravis UltraSound.
 .
 :CONFIG_GUSBASE
-Indirizzo base IO della scheda audio Gravis Ultrasound.
+Indirizzo porta IO della scheda audio Gravis Ultrasound.
 .
 :CONFIG_GUSIRQ
 Numero IRQ della scheda audio Gravis UltraSound.
@@ -275,6 +275,34 @@ Canale DMA della scheda audio Gravis UltraSound.
 Percorso per la cartella UltraSound. Questa directory dovrebbe contenere una
 cartella MIDI con al suo interno i patch file per la riproduzione GUS.
 I set di patch utilizzati con Timidity dovrebbero funzionare.
+.
+:CONFIG_SIDMODEL
+Modello di chip da emulare nella scheda Innovation SSI-2001:
+ - auto:  Seleziona il chip 6581.
+ - 6581:  Il chip originale, noto per il suo suono basso e ricco.
+ - 8580:  Una revisione successiva che corrispondeva più da vicino alla
+          specifica SID.
+          Ha corretto il bias DC del 6581 ed è meno incline alla distorsione.
+          L'8580 è un'opzione sulle schede di riproduzione, come il DuoSID.
+ - none:  Disabilita la scheda.
+.
+:CONFIG_SIDCLOCK
+Frequenza di clock del chip SID, modificabile tramite ponticello (o jumper)
+sulle schede di riproduzione.
+ - default: utilizza 0.895 MHz, per la scheda SSI-2001 originale.
+ - c64ntsc: utilizza 1.023 MHz, per i PC Commodore NTSC e DuoSID.
+ - c64pal:  utilizza 0.985 MHz, per i PC Commodore PAL e DuoSID.
+ - hardsid: utilizza 1.000 MHz, disponibile sul DuoSID.
+.
+:CONFIG_SIDPORT
+Indirizzo porta IO della scheda audio Innovation SSI-2001.
+.
+:CONFIG_6581FILTER
+Il filtraggio analogico del SID rendeva ogni chip fisicamente unico.
+Regola la forza di filtraggio del chip 6581 come percentuale da 0 a 100.
+.
+:CONFIG_8580FILTER
+Regola la forza di filtraggio del chip 8580 come percentuale da 0 a 100.
 .
 :CONFIG_PCSPEAKER
 Attiva l'emulazione del PC-Speaker (altoparlante interno del PC).
@@ -298,6 +326,9 @@ Frequenza di campionamento della generazione del suono a 3-voci Tandy.
 :CONFIG_DISNEY
 Attiva l'emulazione Disney Sound Source.
 (Compatibile con Covox Voice Master e Speech Thing)
+.
+:CONFIG_PS1AUDIO
+Abilita l'emulazione audio IBM PS/1.
 .
 :CONFIG_JOYSTICKTYPE
 Tipo di joystick da emulare: auto (predefinito),
@@ -707,6 +738,38 @@ https://github.com/dosbox-staging/dosbox-staging/wiki[0m
 [31;1mIn caso di errori, DOSBox si interromperà e terminerà senza preavvisi![0m
 
 .
+:PROGRAM_INTRO_MOUNT_START
+[2J[32;1mEcco alcuni comandi utili per iniziare:[0m
+Prima di poter usare i file nel tuo filesystem,
+Devi montare la directory che contiene i file.
+
+
+.
+:PROGRAM_INTRO_MOUNT_WINDOWS
+[44;1m╔══════════════════════════════════════════════════════════════════════════╗
+║ [32mmount c c:\giochidos\[37m crea un'unità C con i contenuti di c:\giochidos.   ║
+║                                                                          ║
+║ [32mc:\giochidos\[37m è un esempio. Sostituiscilo con la tua cartella dei giochi.[37m║
+╚══════════════════════════════════════════════════════════════════════════╝[0m
+
+.
+:PROGRAM_INTRO_MOUNT_OTHER
+[44;1m╔════════════════════════════════════════════════════════════════════════╗
+║ [32mmount c ~/giochidos[37m crea un'unità C con i contenuti di ~/giochidos.    ║
+║                                                                        ║
+║ [32m~/giochidos[37m è un esempio. Sostituiscilo con la tua cartella dei giochi.[37m║
+╚════════════════════════════════════════════════════════════════════════╝[0m
+
+.
+:PROGRAM_INTRO_MOUNT_END
+Dopo aver montato con successo il disco è possibile digitare [34;1mc:[0m per spostarti
+nella tua nuova unità C. 
+Una volta qui, digita [34;1mdir[0m per visualizzarne il contenuto.
+[34;1mcd[0m ti permette di spostarti all'interno di in una cartella 
+(riconoscibile dalle [33;1m[][0m nell'elenco delle cartelle).
+Puoi eseguire programmi/file con estensione [31m.exe, .bat[0m e [31m.com[0m.
+
+.
 :PROGRAM_INTRO_CDROM_WINDOWS
 [2J[32;1mCome montare un'unità CD-ROM virtuale in DOSBox:[0m
 DOSBox fornisce un'emulazione CD-ROM a vari livelli.
@@ -728,39 +791,7 @@ Inoltre, puoi usare imgmount per montare immagini iso o cue/bin:
 [34;1mimgmount D C:\cd.cue -t cdrom[0m
 
 .
-:PROGRAM_INTRO_MOUNT_START
-[2J[32;1mEcco alcuni comandi utili per iniziare:[0m
-Prima di poter usare i file nel tuo filesystem,
-Devi montare la directory che contiene i file.
-
-
-.
-:PROGRAM_INTRO_MOUNT_WINDOWS
-[44;1m╔══════════════════════════════════════════════════════════════════════════╗
-║ [32mmount c c:\dosgames\[37m crea un'unità C con i contenuti di c:\dosprog.      ║
-║                                                                          ║
-║ [32mc:\dosgames\[37m è un esempio. Sostituiscilo con la tua cartella dei giochi.[37m ║
-╚══════════════════════════════════════════════════════════════════════════╝[0m
-
-.
-:PROGRAM_INTRO_MOUNT_OTHER
-[44;1m╔════════════════════════════════════════════════════════════════════════╗
-║ [32mmount c ~/dosgames[37m crea un'unità C con i contenuti di ~/dosprog.       ║
-║                                                                        ║
-║ [32m~/dosgames[37m è un esempio. Sostituiscilo con la tua cartella dei giochi.[37m ║
-╚════════════════════════════════════════════════════════════════════════╝[0m
-
-.
-:PROGRAM_INTRO_MOUNT_END
-Dopo aver montato con successo il disco è possibile digitare [34;1mc:[0m per spostarti
-nella tua nuova unità C. 
-Una volta qui, digita [34;1mdir[0m per visualizzarne il contenuto.
-[34;1mcd[0m ti permette di spostarti all'interno di in una cartella 
-(riconoscibile dalle [33;1m[][0m nell'elenco delle cartelle).
-Puoi eseguire programmi/file con estensione [31m.exe, .bat[0m e [31m.com[0m.
-
-.
-:PROGRAM_INTRO_CDROM
+:PROGRAM_INTRO_CDROM_OTHER
 [2J[32;1mCome montare un'unità CD-ROM virtuale in DOSBox:[0m
 DOSBox fornisce un'emulazione CD-ROM a vari livelli.
 
@@ -768,15 +799,17 @@ Funziona su tutte le cartelle normali, viene installato MSCDEX e impostati
 tutti i file in sola lettura. Di solito questo va bene per la maggior parte
 dei giochi:
 
-[34;1mmount D C:\esempio -t cdrom[0m
+[34;1mmount D ~/esempio -t cdrom[0m
 
-Se non funziona, potresti dover dire a DOSBox l'etichetta del CD-ROM:
+Se non funziona, potresti dover specificare l'etichetta del CD-ROM:
 
-[34;1mmount D C:\esempio -t cdrom -label ETICHETTA[0m
+[34;1mmount D ~/esempio -t cdrom -label ETICHETTA[0m
 
 Inoltre, puoi usare imgmount per montare immagini iso o cue/bin:
 
-[34;1mimgmount D C:\cd.iso -t cdrom[0m
+[34;1mimgmount D ~/cd.iso -t cdrom[0m
+
+[34;1mimgmount D ~/cd.cue -t cdrom[0m
 
 .
 :PROGRAM_INTRO_SPECIAL
@@ -793,11 +826,11 @@ Possono essere modificati nel [33mkeymapper[0m.
 [33;1m%s+F5[0m   %s Scatta un'istantanea dello schermo (screenshot).
 [33;1m%s+F6[0m   %s Avvia/ferma la registrazione dell'output audio su un file wave.
 [33;1m%s+F7[0m   %s Avvia/ferma la registrazione dell'output video su un file zmbv.
-[33;1m%s+F9[0m   %s Chiudi l'emulatore.
+[33;1m%s+F9[0m   %s Chiude l'emulatore.
 [33;1m%s+F10[0m  %s Cattura/Rilascia il mouse.
 [33;1m%s+F11[0m  %s Rallenta l'emulazione (Decrementa i Cicli DOSBox).
 [33;1m%s+F12[0m  %s Accelera l'emulazione (Incrementa i Cicli DOSBox).
-[33;1m%sF12[0m     Sblocca la velocità (pulsante turbo/avanzamento rapido).
+[33;1m%s+F12[0m    Sblocca la velocità (pulsante turbo/avanzamento rapido).
 
 .
 :PROGRAM_BOOT_NOT_EXIST
@@ -1243,7 +1276,7 @@ destinazione è già in uso. È possibile utilizzare SUBST solo su unità locali
 ║ DOSBox supporta la modalità CGA Composita.                           ║
 ║ Usa [31mF12[37m per impostare l'uscita composita su ON, OFF o AUTO           ║
 ║ (impostazione predefinita).                                          ║
-║ [31m%s+F11[37m cambia tonalità; [31m%s+%s+F11[37m seleziona il modello CGA.%s      ║
+║ [31m(%s+)F11[37m cambia tonalità; [31m%s+%s+F11[37m seleziona il modello CGA.%s    ║
 ║                                                                      ║
 
 .
@@ -1318,6 +1351,10 @@ Visualizza messaggi e attiva/disattiva la ripetizione dei comandi.
 .
 :SHELL_CMD_EXIT_HELP
 Esci dalla shell.
+
+.
+:SHELL_CMD_HELP_HELP
+Visualizza la guida.
 
 .
 :SHELL_CMD_HELP_HELP_LONG
